--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build for Release
-        run: swift build -c release
+        run: swift build -c release --arch arm64 --arch x86_64
       - name: "Zip Artifacts"
         run: zip -r ./firewalk.zip --junk-paths .build/release/firewalk # Add resources later.
       - name: "Generate Release URL"
