--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,14 @@ on:
 jobs:
   release:
     name: Upload Release Artifact
-    runs-on: macos-latest    
+    runs-on: macos-latest
     env: 
       DEVELOPER_DIR: /Applications/Xcode_12.3.app/Contents/Developer
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build for Release
-        run: swift build -c release --arch arm64 --arch x86_64
+        run: swift build -c release
       - name: "Zip Artifacts"
         run: zip -r ./firewalk.zip --junk-paths .build/release/firewalk # Add resources later.
       - name: "Generate Release URL"
