--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ on:
 jobs:
   spm:
     name: Test with SPM
-    runs-on: macOS-latest    
+    runs-on: firebreak
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
     steps:
       - uses: actions/checkout@v2
       - name: SPM Test
