--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,9 @@ on:
 jobs:
   release:
     name: Upload Release Artifact
-    runs-on: macos-latest
+    runs-on: firebreak
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.3.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
     steps:
       - name: Checkout
         uses: actions/checkout@v2
