Add concurrency group.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,15 @@ on:
       - '.github/workflows/**'
       - 'Package.swift'
   pull_request:
-    branches: 
-      - '*'
     paths:
       - 'Sources/**'
       - 'Tests/**'
       - '.github/workflows/**'
       - 'Package.swift'
+
+concurrency: 
+  group: ${{ github.ref_name }}
+  cancel-in-progress: true
 
 jobs:
   macOS:
