--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,14 @@ jobs:
     name: Upload Release Artifact
     runs-on: firebreak
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_13.2.1.app/Contents/Developer
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build for Release
-        run: swift build -c release
+        run: swift build -c release --arch arm64 --arch x86_64
       - name: "Zip Artifacts"
-        run: zip -r ./firewalk.zip --junk-paths .build/release/firewalk # Add resources later.
+        run: zip -r ./firewalk.zip --junk-paths .build/apple/Products/Release/firewalk # Add resources later.
       - name: "Generate Release URL"
         run: echo "::set-output name=upload_url::https://uploads.github.com/repos/$GITHUB_REPOSITORY/releases/$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)/assets{?name,label}"  
         id: release
