--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     name: macOS
     runs-on: firebreak
     env:
-      DEVELOPER_DIR: /Applications/Xcode_14.3.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_14.3.1.app/Contents/Developer
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,7 @@ jobs:
     name: Linux
     runs-on: ubuntu-22.04
     container:
-      image: swiftlang/swift:nightly-5.8-jammy
+      image: swift:5.8.1-jammy
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
